add basic authentication service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
       "lib": ["esnext"],
       "esModuleInterop": true
     },
-    "include": ["./routes/*"],
+    "include": ["./routes/*", "./services/*", "./interfaces/*"],
     "exclude": ["node_modules/*"]
 }
